copying config file from Java Package

--- a/aws_sphinx_build.conf
+++ b/aws_sphinx_build.conf
@@ -30,8 +30,8 @@ doc_inputs:
       dir: source
     - package: AWSDocsSdkExamplesPublic
       dir: php
-#    - git-mirror: https://github.com/<insert URL path here>
-#      dir: <insert path here>
+    - dir: aws-php-developer-guide-mirror/doc_source
+      type: local
     - dir: source
 
 # **doc_outputs** is a list, in order, of the output types (targets) to
